# ulsa

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  active_sampling_temporal.py  active_sampling_temporal_3d.py  antialias.ipynb  benchmark_active_sampling_ultrasound.py  determine_first_frame.py  diverging.py  doppler.ipynb  example.ipynb  gcnr.py  harmonic_imaging_playground.ipynb  pyproject.toml  render_cardiac_dataset.py  ruff.toml  users.yaml.example
.devcontainer/: devcontainer.json
additional_results/: README.md  strategy_sim.py
assets/: README.md  generate_additional_assets.py  generate_assets.py
benchmarking_scripts/: eval_3d.py  eval_downstream_task.py  eval_downstream_task_echonet.py  eval_downstream_task_echonetlvh.py  eval_downstream_task_echonetlvh_measurements.py  eval_echonet_dynamic.py  eval_in_house_cardiac.py  eval_in_house_cardiac.sh  eval_in_house_cardiac_image_quality.py  inference_speed.py  inference_speed.sh  sweep_diffusion_model.py  sweep_num_particles.py  sweep_omega.py  transmit_time.py
configs/: agent_v3_cardiac_112_3_frames.yaml  cardiac_112_3_frames.yaml  cardiac_112_3_frames_harmonic.yaml  cardiac_112_frames_harmonic.yaml  cardiac_256_3_frames.yaml  echonet_3_frames.yaml  echonet_3_frames_downstream_task.yaml  echonet_6_frames.yaml  echonetlvh_3_frames.yaml  echonetlvh_3_frames_downstream_task.yaml  elevation_3d.yaml  envelope_data.yaml
derivations/: pixelwise_entropy.md
docs/: README.md  echonet-examples.html  generate_assets.py  generate_assets.sh  index.html  index.md
downstream_task/: echonet_segmentation.py
(+93 files in other folders)
